[package]
name = "tag_password"
description = "An advanced Rust library leveraging the type system to statically determine password hashing status for enhanced security."
license-file = "LICENSE"
documentation = "https://docs.rs/tag_password"
homepage = "https://devs.transitions.ag/"
repository = "https://github.com/TransitionsAg/tag_password"
readme = "README.md"
version = "0.1.3-pre3"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.2", optional = true }
async-graphql = { version = "6.0.11", optional = true }
rand_core = { version = "0.6.4", features = ["getrandom"], optional = true }
serde = { version = "1.0.193", features = ["derive"], optional = true }

[features]
default = ["argon2", "serde"]
argon2 = ["dep:argon2", "dep:rand_core"]
serde = ["dep:serde"]
graphql = ["dep:async-graphql"]
